	  code regardless of which version it's upgrading from.
	* Forcing the save of session data prior to reloading and redirecting. This should resolve
	  some weird quirks.
	* New method, Session::ForceSave.  This will write the current $_SESSION data back to the
	  datastore.
	* Updated the packager to wordwrap lines to stay within 100 characters. Also improved the
	  formatting a little.

Core Plus 2.4.1

	* Fixed bug with themes not reinstalling as expected.
	* Moved the description field to above the input on standard form elements.
	* Better error reporting on the View.
	* Load blank meta data from the page object if provided in FormPageMetas.
	* New method, Core::CompareValues.  Provides more useful variable comparisons in forms.
	* New Filter option, linkname.  Allows the model key to be defined separately from the element name.
	* Updated the session system to make use of 5.4 systems.  This should clear up any weird issues with sessions.
	* Incremented the minimum php version from 5.3.x to 5.4.x.
	* Added form controller methods for several elements, including alternate page templates, user metatag autocompete,
	and keyword metatag autocomplete.
	* Support for alternate page templates is now working better!
	* Huge redux on how the page meta system operates and stores data.  Each key for each page is now stored individually
	in the page_meta table.  This allows for lookups of this metadata and for more functionality of the tags.
	* Scaffolding support for site-wide tag systems via the new metadata system.
	* Added support for <upgrade> directives to contain a <phpfileinclude> tag.  This file gets executed automatically upon
	the appropriate upgrade.  This allows for very fine grain upgrade logic such as data manipulations and whatnot.
	* Minor updates throughout the core and page request system to better support CLI testing.
	* Added support for readonly filters.  These are useful for print views.